ISSUE-014: Removed "" from INI file

--- a/engcommon/builder.ini
+++ b/engcommon/builder.ini
@@ -1,7 +1,7 @@
 [builder]
-apihost = "hosaka.local"
-buildhost = "hosaka.local"
-dockerhost = "hosaka.local:5000"
-jenkinshost = "hosaka.local:9191"
-xhplconsole_url = "http://hosaka.local:3456/v1/machines"
-kubeconfig = "/opt/kube/config"
+apihost=hosaka.local
+buildhost=hosaka.local
+dockerhost=hosaka.local:5000
+jenkinshost=hosaka.local:9191
+xhplconsole_url=http://hosaka.local:3456/v1/machines
+kubeconfig=/opt/kube/config
