--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,8 +10,9 @@ serialize =
 
 [bumpversion:part:release]
 optional_value = final
-first_value = rc
+first_value = dev
 values = 
+	dev
 	rc
 	final
 
